quiz(fix): make responsive on tablet

--- a/src/styles/Cards.module.scss
+++ b/src/styles/Cards.module.scss
@@ -1,5 +1,5 @@
 .container {
-    width: 70vw; // responsive
+    width: 90%; // responsive
     perspective: 1000px;
     display: flex;
     flex-flow: column;
